--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </a>
             <div class="pe-md-5 mt-4 mt-md-0">
               <!--<div class="post-meta mt-4">Mission &amp; Vision</div>-->
-              <h2 class="mb-4 display-4">Deskripsi Wayang</h2>
+              <h2 class="mb-4 display-4">Deskripsi Wayang Kulit</h2>
 
                <img src="assets/img/wayang/wayang 3.png" alt="" class="img-3" >
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
