--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li><a href="index.html">Beranda</a></li>
           <li><a href="about.html">Sejarah</a></li>
           <li><a href="single-post.html">Galeri</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Kontak</a></li>
           <li><a href="search-result.html">Saran</a></li>
         </ul>
       </nav><!-- .navbar -->
