--- a/index.html
+++ b/index.html
@@ -125,8 +125,10 @@
               <h2 class="mb-4 display-4">Deskripsi Wayang Kulit</h2>
 
                <img src="assets/img/wayang/wayang 3.png" alt="" class="img-3" >
+               <div class="Deskripsi-wayang-kulit">
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
               <p>Fugit eaque illum blanditiis, quo exercitationem maiores autem laudantium unde excepturi dolores quasi eos vero harum ipsa quam laborum illo aut facere voluptates aliquam adipisci sapiente beatae ullam. Tempora culpa iusto illum accusantium cum hic quisquam dolor placeat officiis eligendi.</p>
+                </div>
             </div>
           </div>
 
