--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <a href="#" class="me-4 thumbnail order-2">
                 <img src="assets/img/wayang/wayang 2.png" alt="" class="img-2">
               </a>
-              <div class="pe-md-5 mt-4 mt-md-0">
+              <div class="pe-md-5 mt-4 mt-md-0 deskripsi">
                 <!--<div class="post-meta mt-4">Mission &amp; Vision</div>-->
                 <h2 class="mb-4 display-4">Deskripsi Wayang Kulit</h2>
 
@@ -131,6 +131,7 @@
                 </div>
               </div>
             </div>
+
 
 
         </div>
