--- a/index.html
+++ b/index.html
@@ -116,23 +116,27 @@
 
 <br>
 
-            <div class="d-md-flex post-entry-2 half mt-5">
-              <a href="#" class="me-4 thumbnail order-2">
-                <img src="assets/img/wayang/wayang 2.png" alt="" class="img-2">
-              </a>
-              <div class="pe-md-5 mt-4 mt-md-0">
-                <!--<div class="post-meta mt-4">Mission &amp; Vision</div>-->
-                <h2 class="mb-4 display-4">Deskripsi Wayang Kulit</h2>
+          <div class="d-md-flex post-entry-2 half mt-5">
+            <a href="#" class="me-4 thumbnail order-2">
+              <img src="assets/img/wayang/wayang 2.png" alt="" class="img-2" >
+            </a>
 
-                <img src="assets/img/wayang/wayang 3.png" alt="" class="img-3">
-                <div class="deskripsi">
-                  <p>Wayang kulit adalah seni tradisional Indonesia yang menggunakan bayangan-bayangan karakter yang diproyeksikan dari layar kulit yang tipis. Biasanya dipentaskan dalam cerita-cerita epik dari mitologi Hindu atau Ramayana dan Mahabharata, meskipun cerita-cerita lokal juga sering diangkat. 
-                    Pertunjukan wayang kulit juga melibatkan musik, nyanyian, dan narasi yang dilakukan oleh dalang (pemain wayang) yang sangat terampil. Selain sebagai hiburan, wayang kulit juga memiliki nilai spiritual dan sosial yang mendalam dalam budaya Indonesia.</p>
-                 
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6">
+                  <img src="assets/img/wayang/wayang 3.png" alt="" class="img-3">
+                </div>
+                <div class="col-md-6">
+                  <div class="Deskripsi-wayang-kulit">
+                    <h2 class="mb-4 display-4">Deskripsi Wayang Kulit</h2>
+                    <p>Wayang kulit adalah seni tradisional Indonesia yang menggunakan bayangan-bayangan karakter yang diproyeksikan dari layar kulit yang tipis. Biasanya dipentaskan dalam cerita-cerita epik dari mitologi Hindu atau Ramayana dan Mahabharata, meskipun cerita-cerita lokal juga sering diangkat. Pertunjukan wayang kulit juga melibatkan musik, nyanyian, dan narasi yang dilakukan oleh dalang (pemain wayang) yang sangat terampil. Selain sebagai hiburan, wayang kulit juga memiliki nilai spiritual dan sosial yang mendalam dalam budaya Indonesia.</p>
+                  </div>
                 </div>
               </div>
             </div>
+            
 
+          </div>
 
         </div>
 
