--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
                 <h2 class="mb-4 display-4">Deskripsi Wayang</h2>
 
                 <img src="assets/img/wayang/wayang 3.png" alt="" class="img-3" >
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, perspiciatis repellat maxime, adipisci non ipsam at itaque rerum vitae, necessitatibus nulla animi expedita cumque provident inventore? Voluptatum in tempora earum deleniti, culpa odit veniam, ea reiciendis sunt ullam temporibus aut!</p>
-                <p>Fugit eaque illum blanditiis, quo exercitationem maiores autem laudantium unde excepturi dolores quasi eos vero harum ipsa quam laborum illo aut facere voluptates aliquam adipisci sapiente beatae ullam. Tempora culpa iusto illum accusantium cum hic quisquam dolor placeat officiis eligendi.</p>
+                <p>Wayang kulit adalah seni tradisional Indonesia yang menggunakan bayangan-bayangan karakter yang diproyeksikan dari layar kulit yang tipis. Biasanya dipentaskan dalam cerita-cerita epik dari mitologi Hindu atau Ramayana dan Mahabharata, meskipun cerita-cerita lokal juga sering diangkat. Pertunjukan wayang kulit juga melibatkan musik, nyanyian, dan narasi yang dilakukan oleh dalang (pemain wayang) yang sangat terampil. Selain sebagai hiburan, 
+                  wayang kulit juga memiliki nilai spiritual dan sosial yang mendalam dalam budaya Indonesia.</p>
               </div>
             </div>
 
