--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               </a>
               <div class="pe-md-5 mt-4 mt-md-0">
                 <!--<div class="post-meta mt-4">Mission &amp; Vision</div>-->
-                <h2 class="mb-4 display-4">Deskripsi Wayang</h2>
+                <h2 class="mb-4 display-4">Deskripsi Wayang Kulit</h2>
 
                 <img src="assets/img/wayang/wayang 3.png" alt="" class="img-3" >
                 <p class="Deskripsi-paragraf">Wayang kulit adalah seni tradisional Indonesia yang menggunakan bayangan-bayangan karakter yang diproyeksikan dari layar kulit yang tipis. Biasanya dipentaskan dalam cerita-cerita epik dari mitologi Hindu atau Ramayana dan Mahabharata, meskipun cerita-cerita lokal juga sering diangkat. Pertunjukan wayang kulit juga melibatkan musik, nyanyian, dan narasi yang dilakukan oleh dalang (pemain wayang) yang sangat terampil. Selain sebagai hiburan, 
