menambahkan arrow di index.html

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                           <h1>120+</h1>
                           <h1>Objek Sejarah</h1>
                       </div>
+                      <i class="bi bi-arrow-right-circle-fill"></i>
                   </div>
               </div>
                   </div>
@@ -124,6 +125,8 @@
                 <!--<div class="post-meta mt-4">Mission &amp; Vision</div>-->
                 <h2 class="mb-4 display-4">Deskripsi Wayang Kulit</h2>
 
+                <br>
+                <br>
                 <img src="assets/img/wayang/wayang 3.png" alt="" class="img-3" >
                 <p class="Deskripsi-paragraf">Wayang kulit adalah seni tradisional Indonesia yang menggunakan bayangan-bayangan karakter yang diproyeksikan dari layar kulit yang tipis. Biasanya dipentaskan dalam cerita-cerita epik dari mitologi Hindu atau Ramayana dan Mahabharata, meskipun cerita-cerita lokal juga sering diangkat. Pertunjukan wayang kulit juga melibatkan musik, nyanyian, dan narasi yang dilakukan oleh dalang (pemain wayang) yang sangat terampil. Selain sebagai hiburan, 
                   wayang kulit juga memiliki nilai spiritual dan sosial yang mendalam dalam budaya Indonesia.</p>
