--- a/index.html
+++ b/index.html
@@ -108,7 +108,9 @@
                           <h1>120+</h1>
                           <h1>Objek Sejarah</h1>
                       </div>
+                      <div class="col-md-2">
                       <i class="bi bi-arrow-right-circle-fill"></i>
+                    </div>
                   </div>
               </div>
                   </div>
