--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- Template Main CSS Files -->
   <link href="assets/css/variables.css" rel="stylesheet">
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/beranda.css" rel="stylesheet">
 
 
 </head>
@@ -96,7 +96,7 @@
               <div class="col-md-8">
                   <div class="ps-md-5 mt-4 mt-md-0">
                       <!--<div class="post-meta mt-4">About us</div>-->
-                      <h2 class="mb-4 display-4">BUDAYA NUSANTARA Mifzal - MUSEUM KOTA TUA</h2>
+                      <h2 class="mb-4 display-4">BUDAYA NUSANTARA- MUSEUM KOTA TUA</h2>
 
                       <div class="border-heading-text">
                   <div class="row">
@@ -109,7 +109,8 @@
                           <h1>Objek Sejarah</h1>
                       </div>
                       <div class="col-md-2">
-                      <i class="bi bi-arrow-right-circle-fill" style="width: 100px; height: 100px;"></i>
+                      <i class="bi bi-arrow-right-circle-fill" style="font-size: 100px;"></i>
+
                     </div>
                   </div>
               </div>
