--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>ZenBlog Bootstrap Template - Contact</title>
+  <title>Wayang Kulit- Kontak</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -34,32 +34,34 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+    <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="beranda.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1>Zeus</h1>
+        <!--<h1>Zeus</h1>-->
       </a>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Beranda</a></li>
+          <li><a href="beranda.html">Beranda</a></li>
           <li><a href="about.html">Sejarah</a></li>
           <li><a href="single-post.html">Galeri</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="contact.html">Kontak</a></li>
           <li><a href="search-result.html">Saran</a></li>
         </ul>
       </nav><!-- .navbar -->
 
-      <div class="position-relative">
+      <!--<div class="position-relative">
         <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
         <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
-        <a href="#" class="mx-2"><span class="bi-instagram"></span></a>
+        <a href="#" class="mx-2"><span class="bi-instagram"></span></a>-->
 
-        <a href="#" class="mx-2 js-search-open"><span class="bi-search"></span></a>
+        <a href="#" class="mx-2 js-search-open">
+          <!--<span class="bi-search"></span>-->
+        </a>
         <i class="bi bi-list mobile-nav-toggle"></i>
 
         <!-- ======= Search Form ======= -->
