--- a/beranda.html
+++ b/beranda.html
@@ -38,7 +38,7 @@
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="index.html" class="logo d-flex align-items-center">
+      <a href="beranda.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
         <!--<h1>Zeus</h1>-->
@@ -46,7 +46,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a href="index.html">Beranda</a></li>
+          <li><a href="beranda.html">Beranda</a></li>
           <li><a href="about.html">Sejarah</a></li>
           <li><a href="single-post.html">Galeri</a></li>
           <li><a href="contact.html">Kontak</a></li>
