--- a/beranda.html
+++ b/beranda.html
@@ -85,7 +85,7 @@
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-lg-12 text-left mb-5">
-            <h1 class="page-title">Wayang Indonesia</h1>
+            <h1 class="page-title ">Wayang Indonesia</h1>
           </div>
         </div>
 
@@ -149,49 +149,39 @@
       </div>
     </section>
   <!-- ======= Footer ======= -->
-  <footer id="footer" class="footer">
-
-    <div class="footer-legal">
-      <div class="container">
-
-        <div class="row justify-content-between">
-          <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-            <div class="copyright">
-              
-             <input type="checkbox"  id="darkmode-toggle"/>
-              <label for="darkmode-toggle">
-              <div class="background"></div>
-              <strong><span></span></strong>
+ <footer id="footer" class="footer">
+    <div class="footer-legal" >
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    <div class="copyright">
+                        <input type="checkbox" id="darkmode-toggle"/>
+                        <label for="darkmode-toggle">
+                            <div class="background"></div>
+                        </label>
+                    </div>
+                    <div class="credits" >
+                        <!-- All the links in the footer should remain intact. -->
+                        <!-- You can delete the links only if you purchased the pro version. -->
+                        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
+                        <a href="#"></a>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="social-links mb-3 mb-lg-0 text-center text-md-end">
+                        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+                        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+                        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+                        <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
+                        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+                    </div>
+                </div>
             </div>
-            
-
-            <div class="credits">
-              <!-- All the links in the footer should remain intact. -->
-              <!-- You can delete the links only if you purchased the pro version. -->
-              <!-- Licensing information: https://bootstrapmade.com/license/ -->
-              <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-              <a href="#"></a>
-            </div>
-
-          </div>
-
-          <div class="col-md-6">
-            <div class="social-links mb-3 mb-lg-0 text-center text-md-end">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-            </div>
-
-          </div>
-
         </div>
-
-      </div>
     </div>
+</footer>
 
-  </footer>
 
   <a href="#" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
