--- a/galeri.html
+++ b/galeri.html
@@ -43,7 +43,7 @@
 
         <nav id="navbar" class="navbar">
           <ul>
-            <li><a href="index.html">Beranda</a></li>
+            <li><a href="beranda.html">Beranda</a></li>
             <li><a href="about.html">Sejarah</a></li>
             <li><a href="galeri.html">Galeri</a></li>
             <li><a href="contact.html">Contact</a></li>
