--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
         <ul>
           <li><a href="beranda.html">Beranda</a></li>
           <li><a href="about.html">Sejarah</a></li>
-          <li><a href="single-post.html">Galeri</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
           <li><a href="contact.html">Kontak</a></li>
           <li><a href="search-result.html">Saran</a></li>
         </ul>
