--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
   <!-- Template Main CSS Files -->
   <link href="assets/css/variables.css" rel="stylesheet">
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/sejarah.css" rel="stylesheet">
 
 
 </head>
