--- a/search-result.html
+++ b/search-result.html
@@ -27,7 +27,7 @@
 
   <!-- Template Main CSS Files -->
   <link href="assets/css/variables.css" rel="stylesheet">
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="assets/css/saran.css" rel="stylesheet">
 
 </head>
 
