--- a/saran.html
+++ b/saran.html
@@ -46,10 +46,10 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="beranda.html">Beranda</a></li>
-          <li><a href="about.html">Sejarah</a></li>
+          <li><a href="sejarah.html">Sejarah</a></li>
           <li><a href="galeri.html">Galeri</a></li>
           <li><a href="contact.html">Kontak</a></li>
-          <li><a href="search-result.html">Saran</a></li>
+          <li><a href="saran.html">Saran</a></li>
         </ul>
       </nav><!-- .navbar -->
 
