--- a/galeri.html
+++ b/galeri.html
@@ -33,47 +33,51 @@
 
   <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="header d-flex align-items-center fixed-top">
-      <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
-        <a href="beranda.html" class="logo d-flex align-items-center">
-          <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <h1>Zeus</h1>
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+
+      <a href="beranda.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <!--<h1>Zeus</h1>-->
+      </a>
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="beranda.html">Beranda</a></li>
+          <li><a href="sejarah.html">Sejarah</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
+          <li><a href="contact.html">Kontak</a></li>
+          <li><a href="saran.html">Saran</a></li>
+        </ul>
+      </nav><!-- .navbar -->
+
+      <!--<div class="position-relative">
+        <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
+        <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
+        <a href="#" class="mx-2"><span class="bi-instagram"></span></a>-->
+
+        <a href="#" class="mx-2 js-search-open">
+          <!--<span class="bi-search"></span>-->
         </a>
+        <i class="bi bi-list mobile-nav-toggle"></i>
 
-        <nav id="navbar" class="navbar">
-          <ul>
-            <li><a href="beranda.html">Beranda</a></li>
-            <li><a href="sejarah.html">Sejarah</a></li>
-            <li><a href="galeri.html">Galeri</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="saran.html">Saran</a></li>
-          </ul>
-        </nav>
-        <!-- .navbar -->
+        <!-- ======= Search Form ======= -->
+        <div class="search-form-wrap js-search-form-wrap">
+          <form action="search-result.html" class="search-form">
+            <span class="icon bi-search"></span>
+            <input type="text" placeholder="Search" class="form-control">
+            <button class="btn js-search-close"><span class="bi-x"></span></button>
+          </form>
+        </div><!-- End Search Form -->
 
-        <div class="position-relative">
-          <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
-          <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
-          <a href="#" class="mx-2"><span class="bi-instagram"></span></a>
-
-          <a href="#" class="mx-2 js-search-open"><span class="bi-search"></span></a>
-          <i class="bi bi-list mobile-nav-toggle"></i>
-
-          <!-- ======= Search Form ======= -->
-          <div class="search-form-wrap js-search-form-wrap">
-            <form action="search-result.html" class="search-form">
-              <span class="icon bi-search"></span>
-              <input type="text" placeholder="Search" class="form-control" />
-              <button class="btn js-search-close"><span class="bi-x"></span></button>
-            </form>
-          </div>
-          <!-- End Search Form -->
-        </div>
       </div>
-    </header>
-    <!-- End Header -->
 
+    </div>
+
+  </header><!-- End Header -->
+
+  
     <main id="main">
       <section id="contact" class="contact mb-5">
         <div class="container" data-aos="fade-up">
