--- a/beranda.html
+++ b/beranda.html
@@ -81,6 +81,18 @@
 
 
    <main id="main">
+    <section style="background-image: url('assets/img/background.jpg');" data-aos="fade-up">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-left mb-5">
+                <h1 class="page-title">Wayang Indonesia</h1>
+            </div>
+        </div>
+        <!-- Isi konten lainnya -->
+    </div>
+</section>
+
+
     <section>
       <div class="container" data-aos="fade-up">
         <div class="row">
