--- a/beranda.html
+++ b/beranda.html
@@ -54,8 +54,10 @@
         </ul>
       </nav><!-- .navbar -->
 
-      <!--<div class="position-relative">
-        <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
+        <div class="position-relative">
+          <button>Sign In</button>
+          <button>Sign Up</button>
+        <!-- <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
         <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
         <a href="#" class="mx-2"><span class="bi-instagram"></span></a>-->
 
@@ -81,7 +83,8 @@
 
 
    <main id="main">
-    <section style="background-image: url('assets/img/background.jpg');" data-aos="fade-up">
+    
+     <section class="background-section">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-left mb-5">
@@ -167,9 +170,6 @@
             <div class="row justify-content-between">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
                     <div class="copyright">
-                        <input type="checkbox" id="darkmode-toggle"/>
-                        <label for="darkmode-toggle">
-                            <div class="background"></div>
                         </label>
                     </div>
                     <div class="credits" >
