--- a/beranda.html
+++ b/beranda.html
@@ -83,8 +83,8 @@
 
 
    <main id="main">
-    
-     <section class="background-section">
+
+    <section class="background-img">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-left mb-5">
