--- a/beranda.html
+++ b/beranda.html
@@ -84,17 +84,16 @@
 
    <main id="main">
 
-    <section class="background-img">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-left mb-5">
-                <h1 class="page-title">Wayang Indonesia</h1>
-            </div>
-        </div>
-        <!-- Isi konten lainnya -->
-    </div>
-</section>
-
+      <section class="background-section">
+          <div class="container">
+              <div class="row">
+                  <div class="col-lg-12 text-left mb-5">
+                      <h1 class="page-title">Wayang Indonesia</h1>
+                  </div>
+              </div>
+              <!-- Isi konten lainnya -->
+          </div>
+      </section>
 
     <section>
       <div class="container" data-aos="fade-up">
