--- a/beranda.html
+++ b/beranda.html
@@ -85,6 +85,7 @@
    <main id="main">
 
       <section class="background-section">
+        <img src="assets/img/wayang/beranda.png" alt="background-section">
           <div class="container">
               <div class="row">
                   <div class="col-lg-12 text-left mb-5">
