--- a/beranda.html
+++ b/beranda.html
@@ -81,20 +81,24 @@
 
   </header><!-- End Header -->
 
+<section id="hero" class="hero d-flex align-items-center section-bg">
+    <div class="container">
+        <div class="row justify-content-between gy-5">
+            <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
+                <h2 data-aos="fade-up">Enjoy Your Healthy<br>Delicious Food</h2>
+                <p data-aos="fade-up" data-aos-delay="100">Sed autem laudantium dolores. Voluptatem itaque ea consequatur eveniet. Eum quas beatae cumque eum quaerat.</p>
+            </div>
+            <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
+                <!-- Tempatkan gambar di sini -->
+            </div>
+        </div>
+    </div>
+</section>
+
 
    <main id="main">
 
-      <section class="background-section">
-        <img src="assets/img/wayang/beranda.png" alt="background-section">
-          <div class="container">
-              <div class="row">
-                  <div class="col-lg-12 text-left mb-5">
-                      <h1 class="page-title">Wayang Indonesia</h1>
-                  </div>
-              </div>
-              <!-- Isi konten lainnya -->
-          </div>
-      </section>
+
 
     <section>
       <div class="container" data-aos="fade-up">
