membuat button sign in dan sign  up

--- a/beranda.html
+++ b/beranda.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Wayang Kulit - Beranda </title>
+  <title>Wayang Kulit - Beranda</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -54,9 +54,10 @@
         </ul>
       </nav><!-- .navbar -->
 
-        <div class="position-relative">
-          <button>Sign In</button>
-          <button>Sign Up</button>
+      <div class="position-relative">
+        <button class="button-nav"> Sign In</button>
+        <button class="button-nav">Sign Up</button>
+        </div>
         <!-- <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
         <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
         <a href="#" class="mx-2"><span class="bi-instagram"></span></a>-->
@@ -81,23 +82,9 @@
 
   </header><!-- End Header -->
 
-<section id="hero" class="hero d-flex align-items-center section-bg">
-    <div class="container">
-        <div class="row justify-content-between gy-5">
-            <div class="col-lg-5 order-2 order-lg-1 d-flex flex-column justify-content-center align-items-center align-items-lg-start text-center text-lg-start">
-                <h2 data-aos="fade-up">Enjoy Your Healthy<br>Delicious Food</h2>
-                <p data-aos="fade-up" data-aos-delay="100">Sed autem laudantium dolores. Voluptatem itaque ea consequatur eveniet. Eum quas beatae cumque eum quaerat.</p>
-            </div>
-            <div class="col-lg-5 order-1 order-lg-2 text-center text-lg-start">
-                <!-- Tempatkan gambar di sini -->
-            </div>
-        </div>
-    </div>
-</section>
 
 
-   <main id="main">
-
+  <main id="main">
 
 
     <section>
