--- a/beranda.html
+++ b/beranda.html
@@ -52,16 +52,26 @@
           <li><a href="contact.html">Kontak</a></li>
           <li><a href="saran.html">Saran</a></li>
         </ul>
+                
       </nav><!-- .navbar -->
 
       <div class="position-relative">
         <button class="button-nav"> Sign In</button>
         <button class="button-nav">Sign Up</button>
         </div>
-         
+         <i class="bi bi-list mobile-nav-toggle"></i>
 
 
       </header><!-- End Header -->
+
+<!-- ======= Hero Section ======= -->
+<section id="hero" class="d-flex align-items-center">
+  <div class="container" data-aos="zoom-out" data-aos-delay="100">
+    <h1>Wayang Indonesia</h1>
+    <h2>Wayang kulit  budaya yang mulai ditinggalkan dan  dilupakan masyarakat.</h2>
+  </div>
+</section><!-- End Hero -->
+
 
 
         <!-- <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
@@ -71,8 +81,6 @@
         <a href="#" class="mx-2 js-search-open">
           <!--<span class="bi-search"></span>-->
         </a>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-
         <!-- ======= Search Form ======= -->
         <div class="search-form-wrap js-search-form-wrap">
           <form action="search-result.html" class="search-form">
@@ -82,15 +90,7 @@
           </form>
         </div><!-- End Search Form -->
 
-      </div>
-
-    </div>
-
-
-
-
   <main id="main">
-
 
     <section>
       <div class="container" data-aos="fade-up">
