--- a/beranda.html
+++ b/beranda.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-
+ <div class="overlay"></div>
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
