--- a/beranda.html
+++ b/beranda.html
@@ -33,7 +33,6 @@
 </head>
 
 <body>
- <div class="overlay"></div>
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
@@ -64,31 +63,18 @@
 
       </header><!-- End Header -->
 
-<!-- ======= Hero Section ======= -->
-<section id="hero" class="d-flex align-items-center">
-  <div class="container" data-aos="zoom-out" data-aos-delay="100">
-    <h1>Wayang Indonesia</h1>
-    <h2>Wayang kulit  budaya yang mulai ditinggalkan dan  dilupakan masyarakat.</h2>
-  </div>
-</section><!-- End Hero -->
-
-
+      <section id="hero" class="d-flex align-items-center">
+        <div class="container">
+          <h1>Wayang Indonesia</h1>
+          <h2>Wayang kulit budaya yang mulai ditinggalkan dan dilupakan masyarakat.</h2>
+        </div>
+      </section>
 
         <!-- <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
         <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
         <a href="#" class="mx-2"><span class="bi-instagram"></span></a>-->
 
-        <a href="#" class="mx-2 js-search-open">
-          <!--<span class="bi-search"></span>-->
-        </a>
-        <!-- ======= Search Form ======= -->
-        <div class="search-form-wrap js-search-form-wrap">
-          <form action="search-result.html" class="search-form">
-            <span class="icon bi-search"></span>
-            <input type="text" placeholder="Search" class="form-control">
-            <button class="btn js-search-close"><span class="bi-x"></span></button>
-          </form>
-        </div><!-- End Search Form -->
+
 
   <main id="main">
 
@@ -96,7 +82,8 @@
       <div class="container" data-aos="fade-up">
         <div class="row">
           <div class="col-lg-12 text-left mb-5">
-            <h1 class="page-title ">Wayang Indonesia</h1>
+            <h1 class="page-title">Deskripsi</h1>
+            <h1 class="page-title1" style="color: #fff;">Wayang Indonesia</h1>
           </div>
         </div>
 
