--- a/beranda.html
+++ b/beranda.html
@@ -83,65 +83,26 @@
         <div class="row">
           <div class="col-lg-12 text-left mb-5">
             <h1 class="page-title">Deskripsi</h1>
-            <h1 class="page-title1" style="color: #fff;">Wayang Indonesia</h1>
+            <h1 class="page-title1">Wayang Indonesia</h1>
           </div>
         </div>
 
-          <div class="row mb-5">
-              <div class="col-md-3">
+          <div class="row mb-12">
+              <div class="col-md-4">
                   <!--<a href="#" class="me-4 thumbnail">-->
-                      <img src="assets/img/wayang/wayang 1.png" alt="" class="img-1 with-border">
+                      <img src="assets/img/wayang/wayang-1.png" alt="" class="img-1 with-border">
                   </a>
               </div>
+              
               <div class="col-md-8">
                   <div class="ps-md-5 mt-4 mt-md-0">
                       <!--<div class="post-meta mt-4">About us</div>-->
-                      <h2 class="mb-4 display-4">BUDAYA NUSANTARA- MUSEUM KOTA TUA</h2>
-
-                  <div class="border-heading-text">
-                      <div class="row">
-                          <div class="col-md-4">
-                              <h1>50+</h1>
-                              <h1>Koleksi</h1>
-                          </div>
-                          <div class="col-md-5">
-                              <h1>120+</h1>
-                              <h1>Objek Sejarah</h1>
-                          </div>
-                      <div class="col-md-3">
-                          <a href="#"><i class="bi bi-arrow-right"></i></a>
-                      </div>
-
-                      </div>
-                  </div>
+                      <h6 class="text-wayangkulit"> Wayang kulit adalah seni tradisional Indonesia yang menggunakan bayangan-bayangan karakter yang diproyeksikan dari layar kulit yang tipis. Biasanya dipentaskan dalam cerita-cerita epik dari mitologi Hindu atau Ramayana dan Mahabharata, meskipun cerita-cerita lokal juga sering diangkat. Pertunjukan wayang kulit juga melibatkan musik, nyanyian, dan narasi yang dilakukan oleh dalang (pemain wayang) yang sangat terampil. Selain sebagai hiburan, 
+                        wayang kulit juga memiliki nilai spiritual dan sosial yang mendalam dalam budaya Indonesia.</h6>
 
                     </div>
                   </div>
-              </div>
-              
-            <div class="d-md-flex post-entry-2 half mt-5">
-              <a href="#" class="me-4 thumbnail order-2">
-                <img src="assets/img/wayang/wayang 2.png" alt="" class="img-2 " >
-              </a>
-                  <div class="pe-md-5 mt-4 mt-md-0">
-                <!--<div class="post-meta mt-4">Mission &amp; Vision</div>-->
-                <h2 class="mb-4 display-4">Deskripsi Wayang Kulit</h2>
-            </div>
-            </div>
-
-              <div class="d-md-flex post-entry-2 half mt-5">
-              <div class="pe-md-5 mt-4 mt-md-0 order-md-2" style="margin-right: 10px;">
-                  <!--<div class="post-meta mt-4">Mission &amp; Vision</div>-->
-                  <p class="mb-5 display-10 Deskripsi-paragraf">
-                      Wayang kulit adalah seni tradisional Indonesia yang menggunakan bayangan-bayangan karakter yang diproyeksikan dari layar kulit yang tipis. Biasanya dipentaskan dalam cerita-cerita epik dari mitologi Hindu atau Ramayana dan Mahabharata, meskipun cerita-cerita lokal juga sering diangkat. Pertunjukan wayang kulit juga melibatkan musik, nyanyian, dan narasi yang dilakukan oleh dalang (pemain wayang) yang sangat terampil. Selain sebagai hiburan, wayang kulit juga memiliki nilai spiritual dan sosial yang mendalam dalam budaya Indonesia.
-                  </p>
-              </div>
-              <a href="#" class="me-4 thumbnail order-md-1">
-                  <img src="assets/img/wayang/wayang 3.png" alt="" class="img-3 with-border">
-              </a>
-          </div>
-
-
+                </div>
 
 
       </div>
