--- a/beranda.html
+++ b/beranda.html
@@ -33,6 +33,8 @@
 </head>
 
 <body>
+
+
   <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
@@ -55,20 +57,21 @@
       </nav><!-- .navbar -->
 
       <div class="position-relative">
-        <button class="button-nav"> Sign In</button>
-        <button class="button-nav">Sign Up</button>
+        <a class="button-nav" href="sign_in.html">Sign In</a>
+        <a class="button-nav" href="sign_up.html">Sign Up</a>
         </div>
          <i class="bi bi-list mobile-nav-toggle"></i>
 
 
       </header><!-- End Header -->
 
-      <section id="hero" class="d-flex align-items-center">
-        <div class="container">
-          <h1>Wayang Indonesia</h1>
-          <h2>Wayang kulit budaya yang mulai ditinggalkan dan dilupakan masyarakat.</h2>
-        </div>
-      </section>
+        <section id="hero" class="d-flex align-items-center">
+          <div class="container text-center">
+            <h1 class="mb-3">Wayang Indonesia</h1>
+            <h2 class="mb-5">Wayang kulit budaya yang mulai ditinggalkan dan dilupakan masyarakat.</h2>
+          </div>
+        </section>
+
 
         <!-- <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
         <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
