--- a/galeri.html
+++ b/galeri.html
@@ -32,7 +32,9 @@
   </head>
 
   <body>
-    <!-- ======= Header ======= -->
+
+
+<!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
@@ -50,33 +52,17 @@
           <li><a href="contact.html">Kontak</a></li>
           <li><a href="saran.html">Saran</a></li>
         </ul>
+                
       </nav><!-- .navbar -->
 
-      <!--<div class="position-relative">
-        <a href="#" class="mx-2"><span class="bi-facebook"></span></a>
-        <a href="#" class="mx-2"><span class="bi-twitter"></span></a>
-        <a href="#" class="mx-2"><span class="bi-instagram"></span></a>-->
+      <div class="position-relative">
+        <a class="button-nav" href="sign_in.html">Sign In</a>
+        <a class="button-nav" href="sign_up.html">Sign Up</a>
+        </div>
+         <i class="bi bi-list mobile-nav-toggle"></i>
 
-        <a href="#" class="mx-2 js-search-open">
-          <!--<span class="bi-search"></span>-->
-        </a>
-        <i class="bi bi-list mobile-nav-toggle"></i>
 
-        <!-- ======= Search Form ======= -->
-        <div class="search-form-wrap js-search-form-wrap">
-          <form action="search-result.html" class="search-form">
-            <span class="icon bi-search"></span>
-            <input type="text" placeholder="Search" class="form-control">
-            <button class="btn js-search-close"><span class="bi-x"></span></button>
-          </form>
-        </div><!-- End Search Form -->
-
-      </div>
-
-    </div>
-
-  </header><!-- End Header -->
-
+      </header><!-- End Header -->
   
     <main id="main">
       <section id="contact" class="contact mb-5">
