--- a/galeri.html
+++ b/galeri.html
@@ -34,7 +34,7 @@
   <body>
 
 
-<!-- ======= Header ======= -->
+  <!-- ======= Header ======= -->
   <header id="header" class="header d-flex align-items-center fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
@@ -49,8 +49,15 @@
           <li><a href="beranda.html">Beranda</a></li>
           <li><a href="sejarah.html">Sejarah</a></li>
           <li><a href="galeri.html">Galeri</a></li>
+
+        <li class="dropdown"><a href="Komunitas.html"><span>Komunitas</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+            <ul>
+              <li><a href="magazine.html">Drop Down 1</a></li>
+
+            </ul>
+          </li>
+
           <li><a href="contact.html">Kontak</a></li>
-          <li><a href="saran.html">Saran</a></li>
         </ul>
                 
       </nav><!-- .navbar -->
