--- a/beranda.html
+++ b/beranda.html
@@ -50,8 +50,15 @@
           <li><a href="beranda.html">Beranda</a></li>
           <li><a href="sejarah.html">Sejarah</a></li>
           <li><a href="galeri.html">Galeri</a></li>
+
+        <li class="dropdown"><a href="Komunitas.html"><span>Komunitas</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+            <ul>
+              <li><a href="magazine.html">Magazine</a></li>
+
+            </ul>
+          </li>
+
           <li><a href="contact.html">Kontak</a></li>
-          <li><a href="saran.html">Saran</a></li>
         </ul>
                 
       </nav><!-- .navbar -->
