--- a/sign_up.html
+++ b/sign_up.html
@@ -39,7 +39,7 @@
 
 <body>
     <div class="back-button">
-        <i class="bi bi-chevron-left"></i>back
+        <a href="beranda.html"><i class="bi bi-chevron-left"></i>back</a>
     </div>
 <div class="container">
     <div class="sign-up">
