--- a/galeri.html
+++ b/galeri.html
@@ -52,7 +52,7 @@
 
         <li class="dropdown"><a href="Komunitas.html"><span>Komunitas</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
-              <li><a href="magazine.html">Drop Down 1</a></li>
+              <li><a href="magazine.html">magazine</a></li>
 
             </ul>
           </li>
