--- a/sign_up.html
+++ b/sign_up.html
@@ -38,9 +38,6 @@
 </head>
 
 <body>
-    <div class="back-button">
-        <a href="beranda.html"><i class="bi bi-chevron-left"></i>back</a>
-    </div>
 <div class="container">
     <div class="sign-up">
         <h1>SIGN UP</h1>
@@ -55,7 +52,9 @@
                 <button class="button1" type="reset">Reset</button>
                 <button class="button2" type="submit">Register</button>
             </div>
+            
             <a class="a-sign-in" href="sign_in.html">Sign In</a>
+              <a class="a-sign-back" href="beranda.html"><i class="bi bi-chevron-left"></i>Back</a>
         </form>
     </div>
     <div class="shadow-puppet-background">
