--- a/beranda.html
+++ b/beranda.html
@@ -51,7 +51,7 @@
           <li><a href="sejarah.html">Sejarah</a></li>
           <li><a href="galeri.html">Galeri</a></li>
 
-        <li class="dropdown"><a href="Komunitas.html"><span>Komunitas</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+        <li class="dropdown"><a href="komunitas.html"><span>Komunitas</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
             <ul>
               <li><a href="magazine.html">Magazine</a></li>
 
