--- a/magazine.html
+++ b/magazine.html
@@ -35,34 +35,42 @@
 </head>
 
 <body>
-    <header id="header" class="header d-flex align-items-center fixed-top">
-        <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+  <!-- ======= Header ======= -->
+  <header id="header" class="header d-flex align-items-center fixed-top">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-            <a href="beranda.html" class="logo d-flex align-items-center">
-                <!-- Uncomment the line below if you also wish to use an image logo -->
-                <!-- <img src="assets/img/logo.png" alt=""> -->
-                <!--<h1>Zeus</h1>-->
-            </a>
+      <a href="beranda.html" class="logo d-flex align-items-center">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <!--<h1>Zeus</h1>-->
+      </a>
 
-            <nav id="navbar" class="navbar">
-                <ul>
-                    <li><a href="beranda.html">Beranda</a></li>
-                    <li><a href="sejarah.html">Sejarah</a></li>
-                    <li><a href="galeri.html">Galeri</a></li>
-                    <li><a href="contact.html">Kontak</a></li>
-                    <li><a href="saran.html">Saran</a></li>
-                </ul>
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a href="beranda.html">Beranda</a></li>
+          <li><a href="sejarah.html">Sejarah</a></li>
+          <li><a href="galeri.html">Galeri</a></li>
 
-            </nav><!-- .navbar -->
+        <li class="dropdown"><a href="komunitas.html"><span>Komunitas</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
+            <ul>
+              <li><a href="magazine.html">Magazine</a></li>
 
-            <div class="position-relative">
-                <a class="button-nav" href="sign_in.html">Sign In</a>
-                <a class="button-nav" href="sign_up.html">Sign Up</a>
-            </div>
-            <i class="bi bi-list mobile-nav-toggle"></i>
+            </ul>
+          </li>
+
+          <li><a href="contact.html">Kontak</a></li>
+        </ul>
+                
+      </nav><!-- .navbar -->
+
+      <div class="position-relative">
+        <a class="button-nav" href="sign_in.html">Sign In</a>
+        <a class="button-nav" href="sign_up.html">Sign Up</a>
+        </div>
+         <i class="bi bi-list mobile-nav-toggle"></i>
 
 
-    </header><!-- End Header -->
+      </header><!-- End Header -->
 
 
     <div class="container" style="margin-top:10%;">
