--- a/sejarah.html
+++ b/sejarah.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Wayang Kulit - Sejarah</title>
+    <title>Wayang Kulit - Beranda</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -37,48 +37,42 @@
 <body>
 
 
-     <!-- ======= Header ======= -->
-  <header id="header" class="header d-flex align-items-center fixed-top">
-    <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
+    <!-- ======= Header ======= -->
+    <header id="header" class="header d-flex align-items-center fixed-top">
+        <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
 
-      <a href="beranda.html" class="logo d-flex align-items-center">
-        <!-- Uncomment the line below if you also wish to use an image logo -->
-        <!-- <img src="assets/img/logo.png" alt=""> -->
-        <!--<h1>Zeus</h1>-->
-      </a>
+            <a href="beranda.html" class="logo d-flex align-items-center">
+                <!-- Uncomment the line below if you also wish to use an image logo -->
+                <!-- <img src="assets/img/logo.png" alt=""> -->
+                <!--<h1>Zeus</h1>-->
+            </a>
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a href="beranda.html">Beranda</a></li>
-          <li><a href="sejarah.html">Sejarah</a></li>
-          <li><a href="galeri.html">Galeri</a></li>
+            <nav id="navbar" class="navbar">
+                <ul>
+                    <li><a href="beranda.html">Beranda</a></li>
+                    <li><a href="sejarah.html">Sejarah</a></li>
+                    <li><a href="galeri.html">Galeri</a></li>
+                    <li><a href="contact.html">Kontak</a></li>
+                    <li><a href="saran.html">Saran</a></li>
+                </ul>
 
-        <li class="dropdown"><a href="komunitas.html"><span>Komunitas</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li><a href="magazine.html">Magazine</a></li>
+            </nav><!-- .navbar -->
 
-            </ul>
-          </li>
-
-          <li><a href="contact.html">Kontak</a></li>
-        </ul>
-                
-      </nav><!-- .navbar -->
-
-      <div class="position-relative">
-        <a class="button-nav" href="sign_in.html">Sign In</a>
-        <a class="button-nav" href="sign_up.html">Sign Up</a>
-        </div>
-         <i class="bi bi-list mobile-nav-toggle"></i>
+            <div class="position-relative">
+                <a class="button-nav" href="sign_in.html">Sign In</a>
+                <a class="button-nav" href="sign_up.html">Sign Up</a>
+            </div>
+            <i class="bi bi-list mobile-nav-toggle"></i>
 
 
-      </header><!-- End Header -->
-    <section id="hero" class="d-flex align-items-center">
+    </header><!-- End Header -->
+
+    <!-- <section id="hero" class="d-flex align-items-center">
         <div class="container">
             <h1 class="mb-3">SEJARAH</h1>
             <h2 class="mb-5 text-center">Menghidupkan Warisan Budaya, Mencerahkan Jiwa</h2>
         </div>
-    </section>
+    </section> -->
 
     <main id="main">
 
@@ -94,7 +88,7 @@
                 <div class="row mb-12">
                     <div class="col-md-4">
                         <!--<a href="#" class="me-4 thumbnail">-->
-                        <img src="assets/img wayangwayang.png" alt="" class="img-1 with-border">
+                        <img src="assets/img/wayang/wayang-1.png" alt="" class="img-1 with-border">
                         </a>
                     </div>
 
@@ -142,7 +136,7 @@
                     </div>
 
                     <div class="col-md-4 mt-4">
-                        <img src="assets/img wyg7.png" alt="Wayangg Kulit" class="img-1 with-border" width="10%">
+                        <img src="assets/img/wyg7.png" alt="Wayangg Kulit" class="img-1 with-border" width="10%">
                         </a>
                     </div>
                 </div>
