--- a/sejarah.html
+++ b/sejarah.html
@@ -88,7 +88,7 @@
                 <div class="row mb-12">
                     <div class="col-md-4">
                         <!--<a href="#" class="me-4 thumbnail">-->
-                        <img src="assets/img/wayang/wayang-1.png" alt="" class="img-1 with-border">
+                        <img src="assets/img/img wayang.png" alt="" class="img-1 with-border">
                         </a>
                     </div>
 
