--- a/sejarah.html
+++ b/sejarah.html
@@ -88,7 +88,7 @@
                 <div class="row mb-12">
                     <div class="col-md-4">
                         <!--<a href="#" class="me-4 thumbnail">-->
-                        <img src="assets/img/img wayang.png" alt="" class="img-1 with-border">
+                        <img src="assets/img/wayang8.png" alt="" class="img-1 with-border">
                         </a>
                     </div>
 
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="col-md-4 mt-4">
-                        <img src="assets/img/wyg7.png" alt="Wayangg Kulit" class="img-1 with-border" width="10%">
+                        <img src="assets/img/wayang7.png" alt="Wayangg Kulit" class="img-1 with-border" width="10%">
                         </a>
                     </div>
                 </div>
